# windows-datetime-fixer

./: .gitignore  Cargo.toml  README.md
src/: config.rs  logging.rs  main.rs  ntp_client.rs  windows_util.rs
tests/: config_test.rs
