[package]
name = "windows-datetime-fixer"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
log = "0.4"
simplelog = "0.12"
ntp = "0.5.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true
